# BananaCoder

./: .gitignore  README.md  pyproject.toml  run_tests.py
banana/: __init__.py  __main__.py  hook.py  security.py
banana/agent/: context.py  loop.py  runner.py  subagent.py
banana/cli/: app.py  display.py
banana/command/: builtin.py  router.py
banana/config/: loader.py  schema.py
banana/memory/: __init__.py  store.py
banana/prompts/: __init__.py  context.py  subagent.py  system.py
banana/providers/: anthropic.py  base.py  factory.py  fallback.py  openai_compat.py
banana/session/: manager.py
banana/skills/: loader.py
banana/tools/: agent_tool.py  ask.py  base.py  bash.py  file_state.py  filesystem.py  mcp.py  memory_tool.py  path_utils.py  registry.py  runtime_state.py  search.py  self_tool.py  skill_tool.py  todo.py  web.py
docs/superpowers/plans/: 2026-06-01-BananaCoder-plan-foundation.md  2026-06-01-BananaCoder-plan-tools-to-cli.md
docs/superpowers/specs/: 2026-06-01-BananaCoder-design.md
tests/: conftest.py  test_agent_runner.py  test_cli.py  test_complex_scenarios.py  test_config.py  test_context.py  test_hook.py  test_mcp.py  test_memory.py  test_provider_base.py  test_provider_fallback.py  test_provider_openai.py  test_session.py  test_skills_loader.py  test_tool_registry.py  test_tools.py
