[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bananacoder"
version = "0.1.0"
description = "A personal AI coding assistant"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0",
    "anthropic>=0.30",
    "pydantic>=2.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "httpx>=0.27",
    "pyyaml>=6.0",
    "loguru>=0.7",
    "aiofiles>=24.0",
    "mcp>=1.0",
    "json-repair>=0.30",
    "tavily-python>=0.5",
]

[project.scripts]
banana = "banana.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["banana"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]
